# wayfire-window-borders

./: .gitignore  PKGBUILD  README.md  build.sh  meson.build
.cache/clangd/index/: deco-button.cpp.DE06EB3D2030CD9B.idx  deco-button.hpp.87A5DC1D2A7C0B44.idx  deco-layout.cpp.69143B8E1FE2CCAD.idx  deco-layout.hpp.4A8D0306CEE0242D.idx  deco-subsurface.cpp.34D0FCA080BA226E.idx  deco-subsurface.hpp.95677330F6A4D755.idx  deco-theme.cpp.39E079A5E0E36D71.idx  deco-theme.hpp.C2D75BCBB38CB96F.idx  decoration.cpp.4423B77FB6129707.idx
metadata/: meson.build  window-borders.xml
src/: deco-button.cpp  deco-button.hpp  deco-layout.cpp  deco-layout.hpp  deco-subsurface.cpp  deco-subsurface.hpp  deco-theme.cpp  deco-theme.hpp  decoration.cpp  meson.build
