decorations = shared_module('decorations',
    ['decoration.cpp', 'deco-subsurface.cpp', 'deco-button.cpp',
      'deco-layout.cpp', 'deco-theme.cpp'],
    dependencies: [wlroots, pixman, wf_protos, wfconfig, cairo, pango, pangocairo],
    install: true,
    install_dir: join_paths(get_option('libdir'), 'wayfire'))
